--- a/src/Librarian/Views/Shared/_LoginPartial.cshtml
+++ b/src/Librarian/Views/Shared/_LoginPartial.cshtml
@@ -5,7 +5,8 @@
     <form asp-controller="Account" asp-action="LogOff" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a asp-controller="Manage" asp-action="Index" title="Manage" style="color:black">Читатель @User.GetUserName()</a>
+                @*<a asp-controller="Manage" asp-action="Index" title="Manage" style="color:black">Читатель @User.GetUserName()</a>*@
+                <a title="Manage" style="color:black">Читатель @User.GetUserName()</a>
             </li>
             <li>                
                 <button type="submit" class="btn btn-link navbar-btn navbar-link"><span style="color:black;font:130% serif;" >Выйти</span></button>                
